@@ -710,6 +710,7 @@ JLIB_DATABASE_ERROR_MENUTYPE="Some menu items or some menu modules related to th
 JLIB_DATABASE_ERROR_MENU_CANNOT_UNSET_DEFAULT="Home menu for languages cannot be unset"
 JLIB_DATABASE_ERROR_MENU_DEFAULT_CHECKIN_USER_MISMATCH="The current home menu for this language is checked out"
 JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS="Another item with the same parent has this alias"
+JLIB_DATABASE_ERROR_MENU_HOME_NOT_COMPONENT="The home menu item must be a component."
 JLIB_DATABASE_ERROR_MOVE_FAILED="%s: :move failed - %s"
 JLIB_DATABASE_ERROR_MUSTCONTAIN_A_TITLE_CATEGORY="Category must have a title"
 JLIB_DATABASE_ERROR_MUSTCONTAIN_A_TITLE_EXTENSION="Extension must have a title"
